--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devcake-deventer/laravel-loki-logging",
+    "name": "SuportecTL/laravel-loki-logging",
     "version": "0.0.1",
     "description": "Logging to Loki for Laravel",
     "type": "library",
@@ -12,8 +12,8 @@
     "require": {
         "php": "^7.0",
         "ext-json": "*",
-        "illuminate/support": "^7.0.0",
-        "illuminate/console": "^7.0.0",
+        "illuminate/support": "^7.0.0|^8.0.0|^9.0.0",
+        "illuminate/console": "^7.0.0|^8.0.0|^9.0.0",
         "monolog/monolog": "^2.0.0"
     },
     "autoload": {
